# LabelOS

./: .dockerignore  .env.example  .env.production.example  .env.test.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical_task.md
.github/workflows/: .gitkeep  ci.yml
apps/agents/: README.md  pyproject.toml
apps/agents/scripts/: health.py
apps/agents/src/labelos_agents/: __init__.py  cli.py  config.py  contracts.py  main.py  models.py
apps/agents/src/labelos_agents/agent_definitions/: __init__.py  base.py  common.py  marketing.py  registry.py  release_planning.py  scouting.py
apps/agents/src/labelos_agents/evaluation/: __init__.py
apps/agents/src/labelos_agents/memory/: __init__.py
apps/agents/src/labelos_agents/providers/: __init__.py
apps/agents/src/labelos_agents/routes/: __init__.py  health.py
apps/agents/src/labelos_agents/tools/: __init__.py
apps/agents/src/labelos_agents/workflows/: __init__.py
apps/agents/tests/: conftest.py  test_agent_contracts.py  test_health.py  test_mock_agents.py
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/scripts/: dev.py
apps/api/src/labelos_api/: __init__.py  auth.py  authorization.py  config.py  exceptions.py  logging.py  main.py  models.py  workos_jwt.py  workos_webhooks.py
apps/api/src/labelos_api/api/: router.py
apps/api/src/labelos_api/api/v1/: artists.py  authorization_examples.py  me.py  onboarding.py  status.py  webhooks.py
apps/api/src/labelos_api/repositories/: __init__.py  label_resources.py
apps/api/src/labelos_api/routes/: __init__.py  health.py
apps/api/tests/: conftest.py  test_auth.py  test_database_foundation.py  test_endpoints.py  test_organization_isolation.py  test_workos_webhooks.py
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/: .gitkeep  git-branching-strategy.md
docs/development/: authorization.md  git-workflow.md  issue-branch-convention.md  workos-environment.md
infrastructure/: .gitkeep
scripts/: .gitkeep  docker-compose.mjs  new-branch.ps1
tests/: .gitkeep
(+42 files in other folders)
